Set main as test source

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
     </repositories>
 
     <build>
+        <testSourceDirectory>src/main/java</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
